// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Datapoint renders 1`] = `
<div
  className="Flex columnGap1 xsDirectionColumn"
>
  <div
    className="FlexItem"
  >
    <div
      className="Flex rowGap1 itemsCenter xsDirectionRow"
      style={
        Object {
          "minHeight": 24,
        }
      }
    >
      <div
        className="FlexItem"
      >
        <div
          className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal"
        >
          Title
        </div>
      </div>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="Flex rowGap2 itemsCenter xsDirectionRow"
    >
      <div
        className="FlexItem"
      >
        <div
          className="Text fontSize400 defaultText alignStart breakWord fontWeightBold"
        >
          1M
        </div>
      </div>
      <div
        className="FlexItem"
      >
        <div
          className="Flex rowGap1 xsDirectionRow"
        >
          <div
            className="FlexItem"
          >
            <svg
              aria-hidden={null}
              aria-label="Value change icon accessibility label"
              className="icon successIcon iconBlock"
              height={16}
              role="img"
              viewBox="0 0 24 24"
              width={16}
            >
              <path
                d="test-file-stub"
              />
            </svg>
          </div>
          <div
            className="FlexItem"
          >
            <div
              className="Text fontSize200 successText alignStart breakWord fontWeightBold"
            >
              30%
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Datapoint renders a badge 1`] = `
<div
  className="Flex columnGap1 xsDirectionColumn"
>
  <div
    className="FlexItem"
  >
    <div
      className="Flex rowGap1 itemsCenter xsDirectionRow"
      style={
        Object {
          "minHeight": 24,
        }
      }
    >
      <div
        className="FlexItem"
      >
        <div
          className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal"
        >
          Title
        </div>
      </div>
      <div
        className="FlexItem"
      >
        <div
          className="Badge middle infoBase"
        >
          Early access
        </div>
      </div>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="Flex rowGap2 itemsCenter xsDirectionRow"
    >
      <div
        className="FlexItem"
      >
        <div
          className="Text fontSize400 defaultText alignStart breakWord fontWeightBold"
        >
          1M
        </div>
      </div>
      <div
        className="FlexItem"
      >
        <div
          className="Flex rowGap1 xsDirectionRow"
        >
          <div
            className="FlexItem"
          >
            <svg
              aria-hidden={null}
              aria-label="Value change icon accessibility label"
              className="icon successIcon iconBlock"
              height={16}
              role="img"
              viewBox="0 0 24 24"
              width={16}
            >
              <path
                d="test-file-stub"
              />
            </svg>
          </div>
          <div
            className="FlexItem"
          >
            <div
              className="Text fontSize200 successText alignStart breakWord fontWeightBold"
            >
              30%
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Datapoint renders a tooltip 1`] = `
<div
  className="Flex columnGap1 xsDirectionColumn"
>
  <div
    className="FlexItem"
  >
    <div
      className="Flex rowGap1 itemsCenter xsDirectionRow"
      style={
        Object {
          "minHeight": 24,
        }
      }
    >
      <div
        className="FlexItem"
      >
        <div
          className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal"
        >
          Title
        </div>
      </div>
      <div
        className="FlexItem"
      >
        <div
          className="box xsDisplayBlock"
        >
          <div
            aria-label=""
            className="box"
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              aria-disabled={false}
              aria-label="This is a good sign"
              className="hideOutline tapTransition circle accessibilityOutline fullWidth pointer"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-hidden={true}
                aria-label=""
                className="icon gray iconBlock"
                height={16}
                role="img"
                viewBox="0 0 24 24"
                width={16}
              >
                <path
                  d="test-file-stub"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="Flex rowGap2 itemsCenter xsDirectionRow"
    >
      <div
        className="FlexItem"
      >
        <div
          className="Text fontSize400 defaultText alignStart breakWord fontWeightBold"
        >
          1M
        </div>
      </div>
      <div
        className="FlexItem"
      >
        <div
          className="Flex rowGap1 xsDirectionRow"
        >
          <div
            className="FlexItem"
          >
            <svg
              aria-hidden={null}
              aria-label="Value change icon accessibility label"
              className="icon successIcon iconBlock"
              height={16}
              role="img"
              viewBox="0 0 24 24"
              width={16}
            >
              <path
                d="test-file-stub"
              />
            </svg>
          </div>
          <div
            className="FlexItem"
          >
            <div
              className="Text fontSize200 successText alignStart breakWord fontWeightBold"
            >
              30%
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Datapoint renders an accessibility label 1`] = `
<div
  className="Flex columnGap1 xsDirectionColumn"
>
  <div
    className="FlexItem"
  >
    <div
      className="Flex rowGap1 itemsCenter xsDirectionRow"
      style={
        Object {
          "minHeight": 24,
        }
      }
    >
      <div
        className="FlexItem"
      >
        <div
          className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal"
        >
          Title
        </div>
      </div>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="Flex rowGap2 itemsCenter xsDirectionRow"
    >
      <div
        className="FlexItem"
      >
        <div
          className="Text fontSize400 defaultText alignStart breakWord fontWeightBold"
        >
          1M
        </div>
      </div>
      <div
        className="FlexItem"
      >
        <div
          className="Flex rowGap1 xsDirectionRow"
        >
          <div
            className="FlexItem"
          >
            <svg
              aria-hidden={null}
              aria-label="Value change icon accessibility label"
              className="icon successIcon iconBlock"
              height={16}
              role="img"
              viewBox="0 0 24 24"
              width={16}
            >
              <path
                d="test-file-stub"
              />
            </svg>
          </div>
          <div
            className="FlexItem"
          >
            <div
              className="Text fontSize200 successText alignStart breakWord fontWeightBold"
            >
              30%
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
